k8s/aws/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloudpilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 296062568732.dkr.ecr.us-east-1.amazonaws.com/cloudpilot-dev-frontend:69ab67a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
