k8s/aws/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudpilot
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
